0.15.1
 - fix: fall-back to ETag verification when downloading resources for
   which no SHA256 sum exists
 - fix: set error message before publishing download job error state
 - setup: bump dclab from 0.60.0 to 0.61.5
 - ref: reduce logging level for SSL verification
0.15.0
 - setup: bump dclab from 0.58.7 to 0.60.0 (internal basins support)
0.14.2
 - fix: avoid error in upload tab when no jobs are present
 - enh: add logging tab in GUI
 - docs: improve doc strings
 - ref: improve logging
 - tests: reduce segmentation faults during testing (#14)
 - setup: bump dclab from 0.58.5 to 0.58.7
0.14.1
 - setup: fix build pipeline (remove editable install)
0.14.0
 - feat: support new DCOR API for uploading data directly to S3
 - feat: perform faster ETag verification instead of SHA256 summing
 - enh: add api.errors.APIBadRequest error class
 - enh: speed-up resource download by computing SHA256 while downloading
 - enh: improve logging
 - setup: bump dclab from 0.57.0 to 0.58.5
 - setup: migrate from setup.py to pyproject.toml
0.13.3
 - setup: bump dclab from 0.55.7 to 0.57.0
0.13.2
 - setup: bump dclab from 0.52.0 to 0.55.7
0.13.1
 - fix: handle not-found-errors for non-existent resource downloads
 - ref: replace setuptools pkg_resources with importlib.resources
0.13.0
 - setup: drop support for Python 3.9
 - ci: migrate from appveyor to GitHub Actions
0.12.9
 - fix: twisted error message upon SHA-256 upload verification (#73)
 - fix: user_show raised unexpected APINotFoundError in wizard
 - fix: support None as empty API key
 - fix: explain to user how to create API token, since CKAN 2.10 does
   not support automatic generation of API keys anymore
 - fix: workaround for broken CKAN logic in user_show
 - enh: skip SSL verification via DCORAID_SKIP_SSL_VERIFY environment variable
 - enh: add ``__repr__`` for ``CKANAPI``
 - ref: introduce `CKANAPI.ckan_version_object` fetching the CKAN version
0.12.8: